add encoder method